# ChordGeefNie

./: README.md  events.json
docs/: 00_promptlog.md  00_promptlog_copilot.md  FS-ChordGeefNie.md  TS-ChordGeefNie.md  architecture.md
frontend/: README_howto.md
frontend/chordgeefnie-web-mvp/: index.html
frontend/chordgeefnie-web-mvp/src-tauri/: Cargo.toml
frontend/chordgeefnie-web-mvp/src-tauri/src/: main.rs
frontend/chordgeefnie-web-mvp/src/app/: App.tsx  Results.tsx
frontend/chordgeefnie-web-mvp/src/types/: ChordGeefNie.ts
mid/: arp_voorbeeld.mid
presets/: mijn-eerste.json
src/: chordgeefniet.py
src/__arch/: chordgeefniet_v0_1_0.py
src/chordgeefnie-juce-skeleton/: README.md
src/chordgeefnie-juce-skeleton/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/chordgeefnie-juce-skeleton/docs/: JUCE_PLUGIN_MAPPING.md
src/chordgeefnie-web-mvp/: README.md  package-lock.json  package.json
src/chordgeefnie-web-mvp/src-tauri/: tauri.conf.json
src/chordgeefnie-web-mvp/src/api/: chordEngine.ts
src/chordgeefnie-web-mvp/src/app/: Generator.tsx
