[package]
name = "chordgeefnie"
version = "0.0.1"
description = "ChordGeefNie Web MVP (Tauri)"
authors = ["Michiel"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
